fix: add min-width for count part and when counter is set zero then change value is visible immediately

--- a/editor-components/coming-soon/coming-soon4/coming-soon4.module.scss
+++ b/editor-components/coming-soon/coming-soon4/coming-soon4.module.scss
@@ -50,6 +50,7 @@
             flex-direction: column;
             gap: var(--composer-gap-md);
             align-items: center;
+            min-width: 55px;
             .count{
                 margin: 0px;
                 color: var(--composer-font-color-primary);
